Improvements to pg widgets (#8)
* Some improvements to the pg widgets backend

* Widget improvements

- added set_value/get_value to ScrollBar
- added set_text/get_text to Button
- widgets sampler program updated to show changes
- fixed pgw Scrollbar rendering
- improvements to Label, TextEntry, TextArea, ComboBox, SpinBox, Slider
- updated widgets sampler program to show changes
- ComboBox allows scroll through entries with wheel now
- fixed bugs in ComboBox and TextArea
- implemented Frame set_widget() method
- implemented scroll_to_pct() method for ScrollArea
- improved GridBox
- implemented Stack and Frame Widgets
- improve GridBox functionality
- implement set_state for CheckBox and ToggleButton
- allow user to change increment value for SpinBox

Co-authored-by: Eric Jeschke <eric@naoj.org>

--- a/ginga/web/pgw/js/ginga_pg.css
+++ b/ginga/web/pgw/js/ginga_pg.css
@@ -77,4 +77,94 @@ canvas {
     margin: 3.5px;
 }
 
+/* ToggleButton CSS via https://www.w3schools.com/howto/howto_css_switch.asp */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 45px;
+    height: 24px;
+}
+  
+.switch input { 
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+  
+.slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+}
+  
+.slider:before {
+    position: absolute;
+    content: "";
+    height: 16px;
+    width: 16px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+ }
+  
+input:checked + .slider {
+    background-color: #2196F3;
+}
+  
+input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+  
+input:checked + .slider:before {
+    -webkit-transform: translateX(21px);
+    -ms-transform: translateX(21px);
+    transform: translateX(21px);
+}
+  
+/* Rounded sliders */
+  .slider.round {
+    border-radius: 24px;
+}
+  
+.slider.round:before {
+    border-radius: 50%;
+}
+
+/* CSS for Frame Widget */
+.frame {
+    border: 1px solid gray;
+    width: 100%;
+    height: 100%;
+    position: relative;
+}
+
+.frame-widget {
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    flex-grow: 1;
+    flex-shrink: 1;
+    padding-bottom: 5%;
+}
+
+.frame-text {
+    text-align: center;
+    margin-top: 0;
+}
+
+/* StackWidget CSS */
+.stackbox {
+    display: grid;
+    justify-items: center;
+    align-items: center;
+}
+
 /*END*/
